--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,20 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <Button
-        android:textColor="@android:color/white"
-        android:backgroundTint="#00C1E7"
-        android:id="@+id/createBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="시작" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <Button
-        android:textColor="@android:color/white"
-        android:backgroundTint="#00C1E7"
-        android:id="@+id/selectBtn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="시작" />
+        android:orientation="horizontal"
+        android:layout_margin="20dp">
+
+        <Button
+            android:textColor="@android:color/white"
+            android:backgroundTint="#00C1E7"
+            android:id="@+id/createBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/start"
+            android:layout_weight="1"/>
+
+        <Button
+            android:textColor="@android:color/white"
+            android:backgroundTint="#00C1E7"
+            android:id="@+id/selectBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="앱 선택"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <GridView
+        android:id="@+id/selected_app_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="3"
+        tools:listitem="@layout/list_item"
+        android:stretchMode="columnWidth"
+        android:layout_margin="10dp"/>
 </LinearLayout>
