--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:paddingBottom="15dp"
     android:orientation="vertical">
 
     <ImageView
@@ -11,6 +12,7 @@
         android:layout_gravity="center"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="3dp" />
+        android:layout_margin="3dp"
+        android:contentDescription="AppList" />
 
 </LinearLayout>
